# penny

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
resources/: codegen.rs  update-currency.sh
src/: currencies.rs  lib.rs  phf_gen.rs
