[package]
authors = ["Brayden Banks <bb010g@gmail.com>"]
build = "build.rs"
categories = []
description = "ISO-4217–compliant currency library"
documentation = "https://docs.rs/penny/0.1.0/penny"
keywords = ["currency", "iso-4217", "money"]
license = "MIT"
name = "penny"
readme = "README.md"
repository = "https://github.com/bb010g/penny"
version = "0.1.0"

[badges.travis-ci]
repository = "bb010g/penny"

[build-dependencies]
phf_codegen = "0.7.21"
quick-xml = "0.7.0"

[dependencies]
mitochondria = "1.1.2"
phf = "0.7.21"

[dependencies.clippy]
optional = true
version = "^0"

[dependencies.serde]
optional = true
version = "1.0.8"

[dependencies.serde_derive]
optional = true
version = "1.0.8"

[features]
default = ["serde-serialize"]
lint = ["clippy"]
serde-serialize = ["serde", "serde_derive"]
